# MAAI-CMMS

./: CITATION.cff  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
data/: china_industrial_examples.json  chinese_industrial_examples.json  made_in_china_2025_mapping.json  made_in_china_2025_timeline.csv  mas_use_case_scoring.csv  use_case_scores.json
docs/: agent-contracts.md  architecture-deep-dive.md  china-industrial-examples.md  china-made-in-china-2025-and-agentic-eam.md  china-real-life-examples.md  evaluation-and-safety.md  figure-guide.md  made-in-china-2025-agentic-eam.md  product-roadmap.md  source-code-walkthrough.md  visuals-and-charts.md
examples/requests/: compressor_noisy.json
scripts/: generate_figures.py
src/maai_cmms_demo/: __init__.py  agents.py  china_cases.py  cli.py  models.py  orchestrator.py  sample_data.py
tests/: test_china_examples.py  test_orchestrator.py
tools/: build_figures.py
